# vec-h

./: README.md
maxvec/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Installation_issues.md  Makefile  README.md  docker-compose.yaml
maxvec/benchmarks/: CMakeLists.txt  maxbench.cpp  utils.hpp
maxvec/benchmarks/big-vector-bench/: Dockerfile  big_vector_bench.cpp  queries.cpp  queries.hpp  utils.cpp  utils.hpp
maxvec/cmake/: GTestModule.cmake  build_type.cmake  maximus.pc.in  maximusConfig.cmake.in
maxvec/docs/: LIMITATIONS.md  engine_limitations.md
maxvec/results/: _vsds_transforms.sh  build_cscs.sh  check_parquet_file.py  full_run.sh  get_index_movement_table.sh  parse_caliper.py  parse_varbatch.py  plot_caliper.py  plot_paper.py  plot_varbatch.py  quick_run.sh  quick_run_batch.sh  recall_ann_vary.sh  recall_from_two_csvs.py  recall_vsds.py  run_cscs.sh  run_cscs_parallel.sh  run_other_experiments.sh  run_quick_cscs_parallel.sh  run_quick_cscs_serial.sh  run_vsds.sh
maxvec/scripts/: build_arrow.sh  build_caliper.sh  build_cudf.sh  build_faiss.sh  build_taskflow.sh  partition_parquet.py  shell.nix
maxvec/src/maximus/: CMakeLists.txt  config.cpp  config.hpp  context.cpp  context.hpp  database.cpp  database.hpp  database_catalogue.cpp  database_catalogue.hpp  error_handling.hpp  memory_pool.hpp  proxy_memory_pool.hpp
maxvec/src/maximus/clickbench/: clickbench_queries.cpp  clickbench_queries.hpp
maxvec/src/maximus/dag/: edge.hpp  query_node.cpp  query_node.hpp  query_plan.cpp  query_plan.hpp
maxvec/src/maximus/exec/: executor.cpp  executor.hpp  pipeline.cpp  pipeline.hpp
maxvec/src/maximus/frontend/: dataset_api.cpp  dataset_api.hpp  expressions.cpp  expressions.hpp  query_plan_api.cpp  query_plan_api.hpp
maxvec/src/maximus/gpu/: cuda_api.hpp  gpu_api.hpp
maxvec/src/maximus/h2o/: h2o_queries.cpp  h2o_queries.hpp
maxvec/src/maximus/hashing/: murmur_hash3.cpp
maxvec/src/maximus/indexes/: index.hpp
maxvec/src/maximus/io/: csv.cpp  csv.hpp  file.cpp  file.hpp  parquet.cpp  parquet.hpp
maxvec/src/maximus/operators/: abstract_distinct_operator.cpp  abstract_distinct_operator.hpp  abstract_distributed_operator.hpp  abstract_filter_operator.cpp  abstract_filter_operator.hpp  abstract_fused_operator.cpp  abstract_fused_operator.hpp  abstract_gather_operator.cpp  abstract_gather_operator.hpp  abstract_group_by_operator.cpp  abstract_group_by_operator.hpp  abstract_hash_join_operator.cpp  abstract_hash_join_operator.hpp  abstract_limit_operator.cpp  abstract_limit_operator.hpp  abstract_limit_per_group_operator.cpp  abstract_limit_per_group_operator.hpp  abstract_local_broadcast_operator.cpp  abstract_local_broadcast_operator.hpp  abstract_operator.hpp  abstract_order_by_operator.cpp  abstract_order_by_operator.hpp  abstract_project_operator.cpp  abstract_project_operator.hpp  abstract_scatter_operator.cpp  abstract_scatter_operator.hpp  abstract_table_source_filter_project_operator.cpp  abstract_table_source_filter_project_operator.hpp  abstract_table_source_operator.cpp  abstract_table_source_operator.hpp  abstract_take_operator.cpp  abstract_take_operator.hpp  abstract_vector_join_operator.cpp  abstract_vector_join_operator.hpp  abstract_vector_project_distance_operator.cpp  abstract_vector_project_distance_operator.hpp  engine.cpp  engine.hpp  properties.hpp
maxvec/src/maximus/profiler/: profiler.cpp  profiler.hpp
maxvec/src/maximus/sql/: parser.cpp  parser.hpp
maxvec/src/maximus/tpch/: tpch_queries.cpp  tpch_queries.hpp
maxvec/src/maximus/types/: aggregate.cpp  aggregate.hpp  cuda_event.cpp  cuda_event.hpp  device_table_ptr.cpp  device_table_ptr.hpp  expression.cpp  expression.hpp  node_type.cpp  node_type.hpp  physical_operator_type.cpp  physical_operator_type.hpp  schema.cpp  schema.hpp  table.cpp  table.hpp  table_batch.cpp  table_batch.hpp  types.cpp  types.hpp
maxvec/src/maximus/utils/: arrow_helpers.cpp  arrow_helpers.hpp  cuda_helpers.cpp  cuda_helpers.hpp  cudf_helpers.cpp  cudf_helpers.hpp  debugging_helpers.hpp  evaluation_helpers.cpp  evaluation_helpers.hpp  json_helpers.cpp  json_helpers.hpp  utils.cpp  utils.hpp
maxvec/src/maximus/vsds/: README.md  vsds_queries.cpp  vsds_queries.hpp  vsds_utils.hpp
maxvec/tests/: CMakeLists.txt  acero.cpp  cuda.cpp  faiss.cpp  faiss_gpu.cpp  list_type_support.cpp  operators.cpp  sift_fixture.hpp  sql.cpp  tpch.cpp  tpch_gpu.cpp  vsds.cpp  vsds_gpu.cpp
maxvec/tests/big-ann-benchmarks/: .gitignore  README  generate_parquet.py
maxvec/tests/big-vector-bench/: README.md  generate_parquet.py  generate_parquet_chunked.py
maxvec/tests/sift/: .gitignore  README  generate_parquet.py
maxvec/tests/sift/parquet10K/: base.parquet  groundtruth.parquet  learn.parquet  query.parquet
maxvec/tests/tpch/: generate_data.py
maxvec/tests/tpch/csv/: lineitem.csv  orders.csv
maxvec/tests/tpch/csv-0.01/: customer.csv  part.csv  partsupp.csv
maxvec/tests/tpch/parquet/: customer.parquet  lineitem.parquet  nation.parquet  orders.parquet  part.parquet  partsupp.parquet  region.parquet  supplier.parquet
maxvec/tests/vsds/: generate_synthetic_vsds.py
maxvec/tests/vsds/data-industrial_and_scientific-sf_0.001/: customer.csv  images.parquet  images_queries.parquet  part.csv  partsupp.csv  region.csv  reviews.parquet  supplier.csv  (+1 more)
postgres/: .gitignore  README.md  load_to_postgres_database.py  pyproject.toml
postgres/postgres-cscs/: Makefile  build_and_deploy.sh  quick_test_cscs.sh  run_cscs_pg_vech.sh  setup_pgvector_cscs.sh
postgres/postgres-default/: Makefile  docker-compose.yml  run_pg_vech.sh
postgres/postgres-scripts/: Dockerfile  entrypoint.sh  flush_caches.py  plan_parser.py  recall_pg_intra.py  recall_pg_vs_max.py  vech_benchmark.py
postgres/postgres-scripts/pgtuning/: cscs-gh200.conf  default.conf
vec-h/dataset-generation/: .gitignore  README.md  create_test_fixtures.py  download_amazon23.py  generate_embeddings_img.py  generate_embeddings_review.py  generate_synthetic_vech.py  generate_tpch_tables.py  generate_vech_tables.py  pyproject.toml  validate_dataset.py
(+147 files in other folders)
